# JaxGCRL

./: README.md  environment.yml  pyproject.toml  run.py
docs/: install.md
jaxgcrl/: __init__.py
jaxgcrl/agents/: __init__.py
jaxgcrl/agents/crl/: crl.py
jaxgcrl/agents/ppo/: ppo.py
jaxgcrl/agents/sac/: sac.py
jaxgcrl/agents/td3/: td3.py
jaxgcrl/envs/manipulation/: arm_envs.py
jaxgcrl/utils/: env.py
scripts/: gpu_smoke.py
tests/: test_compat.py
