[project]
name = "jaxgcrl"
version = "0.2.8"
description = "Blazingly fast goal-conditioned environments based on MJX and BRAX."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "brax>=0.14.2,<0.15",
  "etils[epath]>=1.14",
  "flax>=0.12.7,<0.13",
  "jax>=0.10,<0.11",
  "mujoco>=3.8.1,<3.9",
  "mujoco-mjx>=3.8.1,<3.9",
  "numpy>=2",
  "optax>=0.2.8,<0.3",
  "scipy>=1.14",
]

[project.optional-dependencies]
train = [
  "matplotlib>=3.8",
  "tyro>=0.9.16",
  "wandb",
  "wandb-osh>=1.2.2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
jaxgcrl = "run:cli"

[project.urls]
homepage = "https://michalbortkiewicz.github.io/JaxGCRL/"

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "run" ]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["assets/*", "assets/**/*"]

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
